--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.0",
-    "expo": "~52.0.18",
-    "expo-application": "~6.0.1",
-    "expo-build-properties": "~0.13.1",
-    "expo-constants": "~17.0.3",
-    "expo-device": "~7.0.1",
-    "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "4.0.11",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-video": "~2.0.2",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~52.0.27",
+    "expo-application": "~6.0.2",
+    "expo-build-properties": "~0.13.2",
+    "expo-constants": "~17.0.4",
+    "expo-device": "~7.0.2",
+    "expo-font": "~13.0.3",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-video": "~2.0.5",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "npm:react-native-tvos@~0.76.5-0",
+    "react-native": "npm:react-native-tvos@~0.76.6-0",
     "react-native-bottom-tabs": "0.5.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.13"
   },
