--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@bottom-tabs/react-navigation": "^0.8.1",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.0",
-    "expo": "~52.0.27",
+    "expo": "~52.0.37",
     "expo-application": "~6.0.2",
     "expo-build-properties": "~0.13.2",
-    "expo-constants": "~17.0.4",
+    "expo-constants": "~17.0.7",
     "expo-device": "~7.0.2",
-    "expo-font": "~13.0.3",
-    "expo-linking": "~7.0.4",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-system-ui": "~4.0.8",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "npm:react-native-tvos@~0.76.6-0",
-    "react-native-bottom-tabs": "0.5.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "3.16.1",
+    "react-native": "npm:react-native-tvos@0.77.1-0",
+    "react-native-bottom-tabs": "^0.8.1",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
@@ -54,7 +55,7 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.5",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
@@ -63,9 +64,11 @@
   "expo": {
     "install": {
       "exclude": [
-        "react-native"
+        "react-native",
+        "react-native-reanimated"
       ]
     }
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
