--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@bottom-tabs/react-navigation": "^0.8.1",
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.0",
     "expo": "~52.0.27",
@@ -35,12 +36,12 @@
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "npm:react-native-tvos@~0.76.6-0",
-    "react-native-bottom-tabs": "0.5.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "3.16.1",
+    "react-native": "npm:react-native-tvos@0.77.0-0",
+    "react-native-bottom-tabs": "^0.8.1",
+    "react-native-gesture-handler": "^2.22.1",
+    "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-screens": "^4.5.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.13"
   },
@@ -63,9 +64,11 @@
   "expo": {
     "install": {
       "exclude": [
-        "react-native"
+        "react-native",
+        "react-native-reanimated"
       ]
     }
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
