Test PR 34532 for Apple TV support of @expo/ui

--- a/package.json
+++ b/package.json
@@ -17,31 +17,37 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "resolutions": {
+    "@expo/ui": "./dependencies/expo-ui-0.0.1.tgz",
+    "expo-modules-core": "./dependencies/expo-modules-core-2.0.6.tgz"
+  },
   "dependencies": {
     "@bottom-tabs/react-navigation": "^0.8.1",
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "4.0.2-canary-20250124-42fe332",
+    "@expo/ui": "./dependencies/expo-ui-0.0.1-1738100635014.tgz",
     "@expo/vector-icons": "^14.0.0",
-    "expo": "~52.0.27",
-    "expo-application": "~6.0.2",
-    "expo-build-properties": "~0.13.2",
-    "expo-constants": "~17.0.4",
-    "expo-device": "~7.0.2",
-    "expo-font": "~13.0.3",
-    "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-video": "~2.0.5",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.0-canary-20250124-42fe332",
+    "expo-application": "6.0.3-canary-20250124-42fe332",
+    "expo-build-properties": "0.13.3-canary-20250124-42fe332",
+    "expo-constants": "17.0.5-canary-20250124-42fe332",
+    "expo-device": "7.0.3-canary-20250124-42fe332",
+    "expo-font": "13.0.4-canary-20250124-42fe332",
+    "expo-linking": "7.1.0-canary-20250124-42fe332",
+    "expo-modules-core": "./dependencies/expo-modules-core-2.0.6.tgz",
+    "expo-router": "4.0.18-canary-20250124-42fe332",
+    "expo-splash-screen": "0.29.22-canary-20250124-42fe332",
+    "expo-status-bar": "2.0.2-canary-20250124-42fe332",
+    "expo-system-ui": "4.0.8-canary-20250124-42fe332",
+    "expo-video": "2.0.6-canary-20250124-42fe332",
+    "expo-web-browser": "14.0.3-canary-20250124-42fe332",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "npm:react-native-tvos@0.77.0-0",
     "react-native-bottom-tabs": "^0.8.1",
-    "react-native-gesture-handler": "^2.22.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.5.0",
+    "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.13"
   },
@@ -53,9 +59,9 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
+    "eslint-config-expo": "8.0.2-canary-20250124-42fe332",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "53.0.0-canary-20250124-42fe332",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
