--- a/package.json
+++ b/package.json
@@ -17,37 +17,32 @@
   "jest": {
     "preset": "jest-expo"
   },
-  "resolutions": {
-    "@expo/ui": "./dependencies/expo-ui-0.0.1.tgz",
-    "expo-modules-core": "./dependencies/expo-modules-core-2.0.6.tgz"
-  },
   "dependencies": {
     "@bottom-tabs/react-navigation": "^0.8.1",
-    "@expo/metro-runtime": "4.0.2-canary-20250124-42fe332",
-    "@expo/ui": "./dependencies/expo-ui-0.0.1-1738100635014.tgz",
+    "@expo/metro-runtime": "4.0.2-canary-20250306-d9d3e02",
+    "@expo/ui": "^0.0.2",
     "@expo/vector-icons": "^14.0.0",
-    "expo": "^53.0.0-canary-20250124-42fe332",
-    "expo-application": "6.0.3-canary-20250124-42fe332",
-    "expo-build-properties": "0.13.3-canary-20250124-42fe332",
-    "expo-constants": "17.0.5-canary-20250124-42fe332",
-    "expo-device": "7.0.3-canary-20250124-42fe332",
-    "expo-font": "13.0.4-canary-20250124-42fe332",
-    "expo-linking": "7.1.0-canary-20250124-42fe332",
-    "expo-modules-core": "./dependencies/expo-modules-core-2.0.6.tgz",
-    "expo-router": "4.0.18-canary-20250124-42fe332",
-    "expo-splash-screen": "0.29.22-canary-20250124-42fe332",
-    "expo-status-bar": "2.0.2-canary-20250124-42fe332",
-    "expo-system-ui": "4.0.8-canary-20250124-42fe332",
-    "expo-video": "2.0.6-canary-20250124-42fe332",
-    "expo-web-browser": "14.0.3-canary-20250124-42fe332",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "expo": "^53.0.0-canary-20250306-d9d3e02",
+    "expo-application": "6.0.3-canary-20250306-d9d3e02",
+    "expo-build-properties": "0.14.0-canary-20250306-d9d3e02",
+    "expo-constants": "18.0.0-canary-20250306-d9d3e02",
+    "expo-device": "7.0.3-canary-20250306-d9d3e02",
+    "expo-font": "14.0.0-canary-20250306-d9d3e02",
+    "expo-linking": "7.1.0-canary-20250306-d9d3e02",
+    "expo-router": "4.0.18-canary-20250306-d9d3e02",
+    "expo-splash-screen": "0.29.23-canary-20250306-d9d3e02",
+    "expo-status-bar": "2.0.2-canary-20250306-d9d3e02",
+    "expo-system-ui": "5.0.0-canary-20250306-d9d3e02",
+    "expo-video": "2.1.0-canary-20250306-d9d3e02",
+    "expo-web-browser": "14.1.0-canary-20250306-d9d3e02",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "npm:react-native-tvos@0.77.0-0",
     "react-native-bottom-tabs": "^0.8.1",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-safe-area-context": "5.2.0",
+    "react-native-screens": "~4.9.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "~0.19.13"
   },
@@ -59,9 +54,9 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "8.0.2-canary-20250124-42fe332",
+    "eslint-config-expo": "8.1.0-canary-20250306-d9d3e02",
     "jest": "^29.2.1",
-    "jest-expo": "53.0.0-canary-20250124-42fe332",
+    "jest-expo": "53.0.0-canary-20250306-d9d3e02",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
