--- a/package.json
+++ b/package.json
@@ -19,56 +19,56 @@
   },
   "dependencies": {
     "@bottom-tabs/react-navigation": "^0.9.0",
-    "@expo/metro-runtime": "~4.0.1",
-    "@expo/vector-icons": "^14.0.0",
-    "expo": "52.0.42",
-    "expo-application": "~6.0.2",
-    "expo-build-properties": "~0.13.2",
-    "expo-constants": "~17.0.8",
-    "expo-device": "~7.0.3",
-    "expo-font": "~13.0.4",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-video": "~2.0.6",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "npm:react-native-tvos@0.77.2-0",
+    "@expo/metro-runtime": "~5.0.1",
+    "@expo/ui": "~0.1.1-alpha.0",
+    "@expo/vector-icons": "^14.1.0",
+    "expo": "^53.0.0-preview.3",
+    "expo-application": "~6.1.1",
+    "expo-build-properties": "~0.14.1",
+    "expo-constants": "~17.1.1",
+    "expo-device": "~7.1.1",
+    "expo-font": "~13.1.1",
+    "expo-linking": "~7.1.1",
+    "expo-router": "~5.0.2-preview.1",
+    "expo-splash-screen": "~0.30.1",
+    "expo-status-bar": "2.1.1-canary-20250408-7f0ab53",
+    "expo-system-ui": "~5.0.2",
+    "expo-video": "~2.1.1",
+    "expo-web-browser": "~14.1.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "npm:react-native-tvos@0.79.0-0",
     "react-native-bottom-tabs": "^0.9.0",
     "react-native-gesture-handler": "2.24.0",
-    "react-native-reanimated": "3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "^3.17.3",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^14.1.1",
     "@react-native-tvos/config-tv": "^0.1.1",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
+    "eslint-config-expo": "~9.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.5",
+    "jest-expo": "~53.0.0-preview.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "expo": {
     "install": {
       "exclude": [
-        "react-native",
-        "react-native-reanimated"
+        "react-native"
       ]
     }
   },
   "private": true,
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@1.22.22"
 }
