--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
   "dependencies": {
     "@bottom-tabs/react-navigation": "^0.9.0",
     "@expo/metro-runtime": "~5.0.1",
-    "@expo/ui": "~0.1.1-alpha.0",
+    "@expo/ui": "~0.1.1-alpha.1",
     "@expo/vector-icons": "^14.1.0",
-    "expo": "^53.0.0-preview.3",
+    "expo": "^53.0.0-preview.7",
     "expo-application": "~6.1.1",
-    "expo-build-properties": "~0.14.1",
+    "expo-build-properties": "~0.14.3",
     "expo-constants": "~17.1.1",
     "expo-device": "~7.1.1",
     "expo-font": "~13.1.1",
     "expo-linking": "~7.1.1",
-    "expo-router": "~5.0.2-preview.1",
-    "expo-splash-screen": "~0.30.1",
-    "expo-status-bar": "2.1.1-canary-20250408-7f0ab53",
+    "expo-router": "~5.0.2-preview.3",
+    "expo-splash-screen": "~0.30.2",
+    "expo-status-bar": "~2.2.0",
     "expo-system-ui": "~5.0.2",
     "expo-video": "~2.1.1",
-    "expo-web-browser": "~14.1.1",
+    "expo-web-browser": "~14.1.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "npm:react-native-tvos@0.79.0-0",
@@ -54,9 +54,9 @@
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~9.0.1",
+    "eslint-config-expo": "~9.0.2",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.0-preview.1",
+    "jest-expo": "~53.0.0-preview.2",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
