--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "expo-web-browser": "~14.1.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "npm:react-native-tvos@0.79.1-0",
+    "react-native": "npm:react-native-tvos@0.79.1-1",
     "react-native-bottom-tabs": "^0.9.0",
     "react-native-gesture-handler": "2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -68,5 +68,6 @@
       ]
     }
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
