--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "exporoutertv",
   "main": "expo-router/entry",
+  "license": "MIT",
   "version": "1.0.0",
   "scripts": {
     "postinstall": "patch-package",
@@ -21,26 +22,26 @@
     "@bottom-tabs/react-navigation": "^0.9.0",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "expo": "53.0.1",
-    "expo-application": "~6.1.3",
-    "expo-build-properties": "~0.14.5",
-    "expo-constants": "~17.1.3",
-    "expo-device": "~7.1.3",
-    "expo-font": "~13.2.2",
-    "expo-linking": "~7.1.3",
-    "expo-router": "~5.0.3",
-    "expo-splash-screen": "~0.30.6",
-    "expo-status-bar": "~2.2.2",
-    "expo-system-ui": "~5.0.5",
-    "expo-video": "~2.1.7",
-    "expo-web-browser": "~14.1.5",
+    "expo": "^53.0.6",
+    "expo-application": "~6.1.4",
+    "expo-build-properties": "~0.14.6",
+    "expo-constants": "~17.1.5",
+    "expo-device": "~7.1.4",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.5",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-video": "~2.1.8",
+    "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "npm:react-native-tvos@0.79.1-1",
+    "react-native": "npm:react-native-tvos@0.79.2-0",
     "react-native-bottom-tabs": "^0.9.0",
     "react-native-gesture-handler": "2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.3.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "^0.20.0"
@@ -53,9 +54,9 @@
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~9.1.1",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.1",
+    "jest-expo": "~53.0.4",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
@@ -68,6 +69,5 @@
       ]
     }
   },
-  "private": true,
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "private": true
 }
