Latest SDK 52, RNTV 0.76.9-0, old arch

--- a/app.json
+++ b/app.json
@@ -46,11 +46,12 @@
     "splash": {
       "image": "./assets/tv_icons/icon-1280x768.png"
     },
+    "newArchEnabled": false,
     "android": {
-      "newArchEnabled": true
+      "package": "com.douglowderexpo.ExpoRouterTV"
     },
     "ios": {
-      "newArchEnabled": true
+      "bundleIdentifier": "com.douglowderexpo.ExpoRouterTV"
     }
   }
 }
