--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.0",
-    "expo": "~52.0.27",
+    "expo": "~52.0.46",
     "expo-application": "~6.0.2",
     "expo-build-properties": "~0.13.2",
-    "expo-constants": "~17.0.4",
-    "expo-device": "~7.0.2",
-    "expo-font": "~13.0.3",
-    "expo-linking": "~7.0.4",
-    "expo-router": "~4.0.17",
-    "expo-splash-screen": "~0.29.21",
+    "expo-constants": "~17.0.8",
+    "expo-device": "~7.0.3",
+    "expo-font": "~13.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.20",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-video": "~2.0.5",
+    "expo-system-ui": "~4.0.9",
+    "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "npm:react-native-tvos@~0.76.6-0",
+    "react-native": "npm:react-native-tvos@0.76.9-0",
     "react-native-bottom-tabs": "0.5.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "3.16.1",
@@ -54,7 +54,7 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
@@ -67,5 +67,6 @@
       ]
     }
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22"
 }
