--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
     "@bottom-tabs/react-navigation": "^0.9.2",
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "expo": "^53.0.11",
-    "expo-application": "~6.1.4",
-    "expo-build-properties": "~0.14.6",
-    "expo-constants": "~17.1.6",
+    "expo": "~53.0.20",
+    "expo-application": "~6.1.5",
+    "expo-build-properties": "~0.14.8",
+    "expo-constants": "~17.1.7",
     "expo-device": "~7.1.4",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
-    "expo-splash-screen": "~0.30.9",
+    "expo-font": "~13.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.8",
-    "expo-video": "~2.2.1",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.10",
+    "expo-video": "~2.2.2",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "npm:react-native-tvos@0.79.4-0",
+    "react-native": "npm:react-native-tvos@0.79.5-0",
     "react-native-bottom-tabs": "^0.9.2",
     "react-native-gesture-handler": "2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -49,14 +49,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^14.1.1",
-    "@react-native-tvos/config-tv": "^0.1.1",
+    "@react-native-tvos/config-tv": "^0.1.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.9",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "18.3.1",
