--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~6.0.2",
+    "@expo/metro-runtime": "~6.1.0",
     "@expo/vector-icons": "^14.1.0",
-    "expo": "~54.0.0-preview.3",
+    "expo": "~54.0.0-preview.4",
     "expo-application": "~7.0.2",
     "expo-build-properties": "~1.0.3",
     "expo-constants": "~18.0.2",
     "expo-device": "~8.0.2",
     "expo-font": "~14.0.2",
     "expo-linking": "~8.0.2",
-    "expo-router": "~6.0.0-beta.3",
-    "expo-splash-screen": "~31.0.2",
+    "expo-router": "~6.0.0-beta.4",
+    "expo-splash-screen": "~31.0.3",
     "expo-status-bar": "~3.0.3",
     "expo-system-ui": "~6.0.2",
     "expo-video": "~3.0.2",
@@ -38,9 +38,9 @@
     "react-dom": "19.1.0",
     "react-native": "npm:react-native-tvos@0.81.0-0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.0.2",
+    "react-native-reanimated": "~4.0.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.14.0",
+    "react-native-screens": "4.14.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "~0.4.1"
