--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "expo-application": "~7.0.2",
     "expo-build-properties": "~1.0.3",
     "expo-constants": "~18.0.2",
+    "expo-dev-client": "~6.0.3",
     "expo-device": "~8.0.2",
+    "expo-file-system": "~19.0.3",
     "expo-font": "~14.0.2",
     "expo-linking": "~8.0.2",
     "expo-router": "~6.0.0-beta.4",
@@ -51,14 +53,12 @@
     "@react-native-tvos/config-tv": "^0.1.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
-    "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~10.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
   },
   "expo": {
