--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
       "expo-router",
       "expo-font",
       "expo-video",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-audio"
     ],
     "experiments": {
       "typedRoutes": true
