--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~6.1.0",
-    "@expo/vector-icons": "^14.1.0",
-    "expo": "~54.0.0-preview.4",
-    "expo-application": "~7.0.2",
-    "expo-audio": "~1.0.3",
-    "expo-build-properties": "~1.0.3",
-    "expo-constants": "~18.0.2",
-    "expo-dev-client": "~6.0.3",
-    "expo-device": "~8.0.2",
-    "expo-file-system": "~19.0.3",
-    "expo-font": "~14.0.2",
-    "expo-linking": "~8.0.2",
-    "expo-router": "~6.0.0-beta.4",
-    "expo-splash-screen": "~31.0.3",
-    "expo-status-bar": "~3.0.3",
-    "expo-system-ui": "~6.0.2",
-    "expo-video": "~3.0.2",
-    "expo-web-browser": "~15.0.2",
+    "@expo/metro-runtime": "~6.1.1",
+    "@expo/vector-icons": "^15.0.2",
+    "expo": "^54.0.0-preview.12",
+    "expo-application": "~7.0.5",
+    "expo-audio": "~1.0.7",
+    "expo-build-properties": "~1.0.6",
+    "expo-constants": "~18.0.6",
+    "expo-dev-client": "~6.0.7",
+    "expo-device": "~8.0.5",
+    "expo-file-system": "~19.0.7",
+    "expo-font": "~14.0.6",
+    "expo-linking": "~8.0.6",
+    "expo-router": "~6.0.0-preview.12",
+    "expo-splash-screen": "~31.0.7",
+    "expo-status-bar": "~3.0.6",
+    "expo-system-ui": "~6.0.5",
+    "expo-video": "~3.0.7",
+    "expo-web-browser": "~15.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "npm:react-native-tvos@0.81.0-0",
+    "react-native": "npm:react-native-tvos@0.81.1-1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.0.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "4.14.0",
+    "react-native-screens": "~4.15.4",
     "react-native-size-matters": "^0.4.2",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "~0.4.1"
+    "react-native-worklets": "~0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
