--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.1",
     "@expo/vector-icons": "^15.0.2",
-    "expo": "^54.0.0-preview.16",
+    "expo": "^54.0.0",
     "expo-application": "~7.0.6",
     "expo-audio": "~1.0.10",
     "expo-build-properties": "~1.0.7",
     "expo-constants": "~18.0.7",
-    "expo-dev-client": "~6.0.10",
+    "expo-dev-client": "~6.0.11",
     "expo-device": "~8.0.6",
-    "expo-file-system": "~19.0.10",
+    "expo-file-system": "~19.0.11",
     "expo-font": "~14.0.7",
     "expo-linking": "~8.0.7",
-    "expo-router": "~6.0.0-preview.16",
+    "expo-router": "~6.0.0",
     "expo-splash-screen": "~31.0.8",
     "expo-status-bar": "~3.0.7",
-    "expo-system-ui": "~6.0.6",
-    "expo-video": "~3.0.10",
+    "expo-system-ui": "~6.0.7",
+    "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "npm:react-native-tvos@0.81.1-3",
+    "react-native": "npm:react-native-tvos@0.81.4-0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
