Move to SDK 54 (#6)
Expo SDK 54 release
React Native TV 0.81.4-0
Reanimated 4.1.0
expo-router native tabs
Added expo-audio demo

--- a/app.json
+++ b/app.json
@@ -17,19 +17,12 @@
           }
         }
       ],
-      [
-        "expo-build-properties",
-        {
-          "ios": {
-            "useFrameworks": "static"
-          }
-        }
-      ],
+      "expo-build-properties",
       "expo-router",
       "expo-font",
       "expo-video",
-      "react-native-bottom-tabs",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-audio"
     ],
     "experiments": {
       "typedRoutes": true
