--- a/package.json
+++ b/package.json
@@ -15,52 +15,46 @@
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
-    "@bottom-tabs/react-navigation": "^0.9.2",
-    "@expo/metro-runtime": "~5.0.4",
-    "@expo/vector-icons": "^14.1.0",
-    "expo": "~53.0.20",
-    "expo-application": "~6.1.5",
-    "expo-build-properties": "~0.14.8",
-    "expo-constants": "~17.1.7",
-    "expo-device": "~7.1.4",
-    "expo-font": "~13.3.2",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
-    "expo-video": "~2.2.2",
-    "expo-web-browser": "~14.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "npm:react-native-tvos@0.79.5-0",
-    "react-native-bottom-tabs": "^0.9.2",
-    "react-native-gesture-handler": "2.24.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "@expo/metro-runtime": "~6.1.1",
+    "@expo/vector-icons": "^15.0.2",
+    "expo": "^54.0.0",
+    "expo-application": "~7.0.6",
+    "expo-audio": "~1.0.10",
+    "expo-build-properties": "~1.0.7",
+    "expo-constants": "~18.0.7",
+    "expo-dev-client": "~6.0.11",
+    "expo-device": "~8.0.6",
+    "expo-file-system": "~19.0.11",
+    "expo-font": "~14.0.7",
+    "expo-linking": "~8.0.7",
+    "expo-router": "~6.0.0",
+    "expo-splash-screen": "~31.0.8",
+    "expo-status-bar": "~3.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-video": "~3.0.11",
+    "expo-web-browser": "~15.0.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "npm:react-native-tvos@0.81.4-0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "~0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^14.1.1",
-    "@react-native-tvos/config-tv": "^0.1.3",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
-    "@types/react-test-renderer": "^18.0.7",
+    "@react-native-tvos/config-tv": "^0.1.4",
+    "@types/react": "~19.1.10",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~9.2.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.9",
+    "eslint-config-expo": "~10.0.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "react-test-renderer": "18.3.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "expo": {
     "install": {
